--- a/gatsby-client/package.json
+++ b/gatsby-client/package.json
@@ -26,12 +26,14 @@
     "gatsby": "^2.26.1",
     "gatsby-plugin-emotion": "^5.4.0",
     "gatsby-plugin-postcss": "^3.7.0",
+    "hamburger-react": "^2.4.0",
     "magic-sdk": "^4.1.1",
     "postcss": "^8.2.5",
     "postcss-import": "^14.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.2.0",
     "stylelint": "^13.9.0",
     "tailwindcss": "^2.0.3",
     "twin.macro": "^2.2.2"
