--- a/gatsby-client/package.json
+++ b/gatsby-client/package.json
@@ -23,7 +23,9 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-create-client-paths": "^2.10.0",
     "gatsby-plugin-emotion": "^5.4.0",
     "gatsby-plugin-postcss": "^3.7.0",
     "hamburger-react": "^2.4.0",
