--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "take home test for web dev interview",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "echo \"i am in the root folder\""
   },
   "repository": {
     "type": "git",
