--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "echo \"this is a test\""
+    "start": "node local.js"
   },
   "engine": {
     "node": "12.19.0"
