--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "echo \"i am in the root folder\""
+    "start": "node nodejs-server/local.js"
   },
   "repository": {
     "type": "git",
