--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-server",
   "version": "1.0.0",
   "description": "To serve the pom-clone client",
-  "main": "server.js",
+  "main": "nodejs-server/local.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node nodejs-server/local.js"
