--- a/gatsby-client/package.json
+++ b/gatsby-client/package.json
@@ -36,6 +36,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "stylelint": "^13.9.0",
     "tailwindcss": "^2.0.3",
     "twin.macro": "^2.2.2"
